The ImapAccount needs to live longer so that it's inner session is done processing the queued event coming from the logout and disconnect triggered on login error.

So don't delete immediately, schedule for deletion and make sure the
ImapResource doesn't listen to it anymore.

BUG: 205480


svn path=/trunk/KDE/kdepim/akonadi/; revision=1019382